# track

./: .cargo-crap.toml  .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  SETUP_WINDOWS.md  crap_baseline.json  rust-toolchain.toml
crates/track-cli/: Cargo.toml  README.md  build.rs
crates/track-cli/src/: cli.rs  lib.rs  main.rs  output.rs  router.rs  tracing_init.rs
crates/track-cli/src/commands/: auth.rs  mod.rs  schema.rs
crates/track-cli/tests/: cli_smoke.rs
crates/track-entity/: Cargo.toml
crates/track-entity/src/: lib.rs
crates/track-host/: Cargo.toml  README.md
crates/track-host-wit/: Cargo.toml  README.md
crates/track-host-wit/src/: lib.rs
crates/track-host/src/: bootstrap.rs  flags.rs  host_cli.rs  host_impl.rs  lock_store.rs  log.rs  logging.rs  main.rs  manifest.rs  paths.rs  policy.rs  preopen.rs  preopens.rs  queue_store.rs  registry_store.rs  state_store.rs  user_config.rs  version_config.rs
crates/track-host/tests/: integration.rs
crates/track-hub/: Cargo.toml
crates/track-hub-conformance-testing/: Cargo.toml
crates/track-hub-conformance-testing/src/: admin.rs  error.rs  lib.rs  lifecycle.rs  replica.rs  shared_log_store.rs  suite.rs
crates/track-hub-http/: Cargo.toml
crates/track-hub-http/src/: error.rs  hub.rs  in_memory.rs  lib.rs  push_observer.rs  server.rs
crates/track-hub-memory/: Cargo.toml
crates/track-hub-memory/src/: error.rs  in_memory_push_observer.rs  lib.rs  test_hub_handle.rs
crates/track-hub-memory/tests/: loopback_push_pull.rs
crates/track-hub-protocol/: Cargo.toml
crates/track-hub-protocol/src/: ack_level.rs  cursor_set.rs  hub_offset.rs  lib.rs  node_cursor.rs  protocol_version.rs  pull_request.rs  pull_response.rs  pulled_event.rs  push_request.rs  push_response.rs  push_result.rs
crates/track-hub/src/: auth.rs  cursor_reports.rs  error.rs  hub_log.rs  hub_service.rs  idempotency.rs  lib.rs  node_registry.rs  pull_service.rs  push_service.rs  push_test_hooks.rs  snapshot_boundary.rs  snapshot_catalog.rs  stream_validation.rs
crates/track-id/: Cargo.toml
crates/track-id/src/: actor.rs  entity_type.rs  entity_urn.rs  error.rs  lib.rs  node_uuid.rs  schema_version.rs  stream_id.rs  track_ulid.rs
crates/track-locations/: Cargo.toml
crates/track-locations/src/: error.rs  lib.rs  locations.rs  platform_paths.rs  user_identity.rs
crates/track-materialize-yaml/: Cargo.toml
crates/track-materialize-yaml/src/: default_projector.rs  error.rs  lib.rs  materialize_selector.rs  materialize_writer.rs  project_layout.rs  write_report.rs  yaml_exclusion_policy.rs  yaml_issue_bundle.rs
crates/track-node/: Cargo.toml
crates/track-node/src/: bootstrap.rs  error.rs  init.rs  lib.rs  push.rs  push_plan.rs  schema_validate.rs
crates/track-project/: Cargo.toml
crates/track-project/src/: discovery.rs  error.rs  init.rs  lib.rs  manifest.rs  template.rs
crates/track-reduce/: Cargo.toml
crates/track-reduce/src/: blob_reducer.rs  comment_reducer.rs  error.rs  event_reducer.rs  execution_reducer.rs  item_reducer.rs  lib.rs  or_set_merge.rs  quarantine_policy.rs  reduce_context.rs  reduce_outcome.rs  reduction_engine.rs  register_merge.rs  relation_reducer.rs  schema_reducer.rs  semantic_validation.rs  snapshot_project.rs
crates/track-reduce/tests/: dual_node_priority.rs  replay_pipeline.rs
crates/track-replication/: Cargo.toml
crates/track-replication/src/: event_classifier.rs  event_envelope.rs  event_kind.rs  event_ord.rs  event_payload.rs  hlc.rs  lib.rs
crates/track-schema-yaml/: Cargo.toml
crates/track-schema-yaml/src/: compile.rs  error.rs  features_document.rs  labels_document.rs  lib.rs  manifest_context.rs  schema_bundle.rs  state_group.rs  states_document.rs  types_document.rs  validate.rs  workflows_document.rs
crates/track-store/: Cargo.toml
crates/track-store-conformance-testing/: Cargo.toml
crates/track-store-conformance-testing/src/: error.rs  fixture.rs  handles.rs  helpers.rs  lib.rs  suite.rs
crates/track-store-memory/: Cargo.toml
crates/track-store-memory/src/: handles.rs  lib.rs  memory_blob_store.rs  memory_conflict_store.rs  memory_entity_store.rs  memory_log_store.rs  memory_quarantine_store.rs  memory_replica_progress_store.rs  memory_schema_store.rs  memory_snapshot_store.rs  or_set_cell.rs
crates/track-store-memory/tests/: store_conformance.rs
crates/track-store-sqlite/: Cargo.toml
crates/track-store-sqlite/migrations/: V1__initial.sql  V2__entity_counter_adjustments.sql
crates/track-store-sqlite/src/: bundle.rs  connection.rs  error.rs  lib.rs  or_set_sqlite.rs  row_mapping.rs  sqlite_blob_store.rs  sqlite_conflict_store.rs  sqlite_entity_store.rs  sqlite_log_store.rs  sqlite_quarantine_store.rs  sqlite_replica_progress_store.rs  sqlite_schema_store.rs  sqlite_snapshot_store.rs  track_sqlite_store.rs
crates/track-store-sqlite/tests/: store_conformance.rs  unit_stores.rs
crates/track-store/src/: blob_store.rs  conflict_store.rs  entity_store.rs  error.rs  file_projector.rs  lib.rs  log_store.rs  or_set_cell.rs  quarantine_store.rs  replica_progress_store.rs  schema_store.rs  snapshot_store.rs
crates/track-sync/: Cargo.toml
crates/track-sync-testing/: Cargo.toml
crates/track-sync-testing/src/: assert_convergence.rs  cluster.rs  compaction.rs  error.rs  event_builder.rs  fault_injection.rs  hub_fixture.rs  lib.rs  replica_simulator.rs  scenario.rs  schema_fixtures.rs  shared_log_store.rs  snapshot.rs  suite.rs  synthetic_hlc.rs
crates/track-sync-testing/tests/: hub_sync_ack.rs  hub_sync_clocks.rs  hub_sync_compaction.rs  hub_sync_concurrent.rs  hub_sync_convergence.rs  hub_sync_event_kinds.rs  hub_sync_merge_matrix.rs  hub_sync_multi_node.rs  hub_sync_offline.rs  hub_sync_protocol.rs  hub_sync_pull_paging.rs  hub_sync_recovery.rs
crates/track-sync/src/: cursor_store.rs  error.rs  http_transport.rs  hub_transport.rs  lib.rs  local_integration.rs  outbound_queue.rs  pull_session.rs  push_session.rs  snapshot_bootstrap.rs  sync_engine.rs  sync_state.rs
crates/track-sync/tests/: push_pull_roundtrip.rs  reduce_after_pull.rs
(+279 files in other folders)
