[workspace]
resolver = "2"
members = [
    "crates/track-id",
    "crates/track-entity",
    "crates/track-replication",
    "crates/track-reduce",
    "crates/track-store",
    "crates/track-store-sqlite",
    "crates/track-materialize-yaml",
    "crates/track-hub-protocol",
    "crates/track-hub",
    "crates/track-hub-memory",
    "crates/track-sync",
    "crates/track-sync-testing",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
track-id = { path = "crates/track-id" }
track-entity = { path = "crates/track-entity" }
track-replication = { path = "crates/track-replication" }
track-reduce = { path = "crates/track-reduce" }
track-store = { path = "crates/track-store" }
track-store-sqlite = { path = "crates/track-store-sqlite" }
track-materialize-yaml = { path = "crates/track-materialize-yaml" }
track-hub-protocol = { path = "crates/track-hub-protocol" }
track-hub = { path = "crates/track-hub" }
track-hub-memory = { path = "crates/track-hub-memory" }
track-sync = { path = "crates/track-sync" }
track-sync-testing = { path = "crates/track-sync-testing" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
ulid = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
strum = { version = "0.27", features = ["derive"] }
nutype = { version = "0.5", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
sha2 = "0.10"
insta = { version = "1", features = ["yaml"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
hyper = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "timeout"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
bytes = "1"
futures = "0.3"
url = "2"
urlencoding = "2"
base64 = "0.22"
