[package]
name = "track-cli"
description = "Track CLI guest component (wasm32-wasip2)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
track-wit-deps = { path = "../track-wit-deps" }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
track-types = { path = "../track-types" }
wit-bindgen = { workspace = true }

[[bin]]
name = "track-cli-dev"
path = "src/bin/track-cli-dev.rs"
required-features = ["dev-native"]

[features]
dev-native = []
