[package]
name = "track-cli"
version = "0.1.0"
description = "Track CLI binary"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "track"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
track-locations = { workspace = true }
track-node = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
