[package]
name = "track-host-wit"
description = "Wasmtime bindgen for track:world/host"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
track-wit-deps = { path = "../track-wit-deps" }

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
