[package]
name = "track-hub-memory"
version = "0.1.0"
description = "Embeddable in-memory test hub (ADR 0004)"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
track-hub = { workspace = true }
track-hub-protocol = { workspace = true }
track-id = { workspace = true }
track-replication = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
track-replication = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }