[package]
name = "track-hub-memory"
version = "0.1.0"
description = "Embeddable in-memory test hub (ADR 0004)"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
track-hub = { workspace = true }
track-hub-http = { workspace = true }
track-id = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
track-hub-protocol = { workspace = true }
track-replication = { workspace = true }
urlencoding = { workspace = true }
