[package]
name = "track-hub-protocol"
version = "0.1.0"
description = "Hub sync protocol types (ADR 0004)"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
track-id = { workspace = true }
track-replication = { workspace = true }
