[package]
name = "track-id"
version = "0.1.0"
description = "Track identity primitives (ULIDs, URNs, actors, stream IDs)"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nutype.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
ulid.workspace = true

[dev-dependencies]
serde_json.workspace = true
