[package]
name = "track-locations"
version = "0.1.0"
description = "User and project storage bucket paths for Track (ADR 0002)"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
track-id = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
