[package]
name = "track-project"
version = "0.1.0"
description = "Track project manifest, discovery, and init"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
track-id = { workspace = true }
track-locations = { workspace = true }
track-schema-yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
