[package]
name = "track-replication"
version = "0.1.0"
description = "Track replication log envelopes, ordering, and event payloads"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
time.workspace = true
track-id.workspace = true

[dev-dependencies]
serde_json.workspace = true
