[package]
name = "track-schema-yaml"
version = "0.1.0"
description = "Load and validate compose-style Track schema YAML files"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
indexmap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
track-entity = { workspace = true }
track-id = { workspace = true }

[dev-dependencies]
tempfile = "3"
