[package]
name = "track-store-conformance-testing"
version = "0.1.0"
description = "Generic store implementation conformance suite (ADR 0007)"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
indexmap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
track-entity.workspace = true
track-id.workspace = true
track-replication.workspace = true
track-store.workspace = true

[dev-dependencies]
tempfile = "3"
track-store-memory = { workspace = true }
track-store-sqlite = { workspace = true }
