[package]
name = "track-store-memory"
version = "0.1.0"
description = "In-memory Track store backend for tests (ADR 0007)"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
track-entity.workspace = true
track-id.workspace = true
track-replication.workspace = true
track-store.workspace = true
track-store-conformance-testing = { workspace = true }

[dev-dependencies]
track-id.workspace = true
track-replication.workspace = true
track-store-conformance-testing = { workspace = true }
