[package]
name = "track-store-sqlite"
version = "0.1.0"
description = "Track SQLite store implementing ADR 0003 persistence"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
indexmap.workspace = true
refinery.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
thiserror.workspace = true
track-entity.workspace = true
track-id.workspace = true
track-replication.workspace = true
track-store.workspace = true
track-store-conformance-testing = { workspace = true }

[dev-dependencies]
indexmap.workspace = true
tempfile = "3"
track-entity.workspace = true
track-id.workspace = true
track-reduce.workspace = true
track-replication.workspace = true
track-store.workspace = true
track-store-conformance-testing = { workspace = true }
