[package]
name = "track-store"
version = "0.1.0"
description = "Track store traits for reducers and materializers"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
track-entity.workspace = true
track-id.workspace = true
track-replication.workspace = true
