[package]
name = "track-sync-testing"
version = "0.1.0"
description = "Multi-node replication sync integration test harness"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
track-entity = { workspace = true }
track-hub = { workspace = true }
track-hub-memory = { workspace = true }
track-hub-protocol = { workspace = true }
track-id = { workspace = true }
track-reduce = { workspace = true }
track-replication = { workspace = true }
track-store = { workspace = true }
track-store-memory = { workspace = true }
track-sync = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
